[package]
name = "sunrise_ssb_play"
version = "0.1.0"
authors = ["mycognosist <gnomad@cryptolab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
futures = "0.3.8"
rand = "0.7"
serde_json = { version = "1.0.48", features = ["preserve_order", "arbitrary_precision"] }
ssb-crypto = "0.2.2"
ssb-handshake = "0.5.1"
ssb-keyfile = "0.5.3"
ssb-multiformats = { git = "https://github.com/sunrise-choir/ssb-multiformats", branch = "master" }
ssb-validate = { git = "https://github.com/sunrise-choir/ssb-validate", branch = "master" }
ssb-verify-signatures = { git = "https://github.com/sunrise-choir/ssb-verify-signatures", branch = "master" }
tempfile = "3.2.0"
